testsuite/poke.pkl/struct-pretty-print-diag-2.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    method _print = (int a) void: { print "foo"; } /* { dg-error "should be of type" } */
  };
